# mimeclip

./: .gitignore  Cargo.toml  README.md
src/cli/: main.rs
src/common/: db.rs  ipc.rs  mod.rs  types.rs
src/daemon/: main.rs  restore.rs  server.rs  suppress.rs  watcher.rs
systemd/: mimeclipd.service
