[package]
name = "mimeclip"
version = "0.1.0"
edition = "2021"
description = "MIME-aware Wayland clipboard history daemon"
license = "MIT"
repository = "https://github.com/MiguelRegueiro/mimeclip"

[lib]
name = "mimeclip_common"
path = "src/lib.rs"

[[bin]]
name = "mimeclipd"
path = "src/daemon/main.rs"

[[bin]]
name = "mimeclip"
path = "src/cli/main.rs"

[dependencies]
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["signal", "process", "fs"] }
libc = "0.2"
base64 = "0.22"
signal-hook = "0.3"
